[metadata]
name = site_hooks
version = 0.1.0
description = Demo for installing .pth files for pre-installed import hooks.
author = Max Simmons
author_email = max@mxsmns.net

[options]
packages = site_hooks
include_package_data = True

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
no_implicit_optional = True
warn_unused_ignores = True
exclude = dist

[flake8]
extend-exclude = 
    .venv
    .tox
    .mypy_cache
    dist
max-complexity = 10
max-line-length = 88
extend-ignore = 
    E203,

[mypy-tests.*]
disallow_untyped_defs = false